--- a/public/client/new-job.html
+++ b/public/client/new-job.html
@@ -207,6 +207,7 @@ document.addEventListener("DOMContentLoaded", () => {
             .insert([{
                 client_id: u.id,
                 client_name: u.full_name,
+                client_phone: u.phone,
                 title,
                 description,
                 category,
