--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,14 @@
 <title>FIXALL - Servicios a Domicilio</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
+<!-- PWA INTEGRACIÓN -->
+<link rel="manifest" href="/manifest.json">
+<link rel="apple-touch-icon" href="/logo/logo.png">
+<meta name="theme-color" content="#6c5ce7">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-capable" content="yes">
 
+<style>
 /* PALETA FIXALL */
 :root {
     --primary: #6c5ce7;
@@ -217,6 +223,15 @@ body {
 </div>
 
 <div class="footer">© 2025 FIXALL - Servicios profesionales a domicilio</div>
+
+<!-- REGISTRO DEL SERVICE WORKER -->
+<script>
+if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("/sw.js")
+      .then(() => console.log("Service Worker registrado"))
+      .catch(err => console.error("Error SW:", err));
+}
+</script>
 
 </body>
 </html>
