--- a/public/login.html
+++ b/public/login.html
@@ -157,6 +157,11 @@ a {
         <p>¿No tienes cuenta?
             <a href="/register.html">Regístrate</a>
         </p>
+
+        <p>
+    <a href="/forgot.html">¿Olvidaste tu contraseña?</a>
+</p>
+
     </div>
 
 </div>
